# DataDictionary

./: .gitignore  decisions.md  pyproject.toml  readme.md  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: deploy.yaml
scripts/: propose-commit.sh
src/: requirements.txt
src/data_dictionary/: bedrock_client.py  dynamo_client.py  models.py  observatory.py  server.py
tests/: test_mcp_observatory_contract.py
