[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-dictionary"
version = "0.1.0"
description = "MCP Server for a DataDictionary with DynamoDB and Bedrock integration"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "mangum>=0.19.0",
    "mcp-observatory @ git+https://github.com/rajatarun/mcp-observatory.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[dynamodb]>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
